--- a/style.css
+++ b/style.css
@@ -1,31 +1,73 @@
-body
-{
+.main {
     background: rgb(227, 176, 87);
-    color:black;
+    color: black;
     font-size: 30px;
-    font-weight:lighter;
-    text-align:center;
-    margin-top: 5px;;
+    font-weight: normal;
+    text-align: center;
+    margin-top: 2px;
+    
 }
 
-.item
-{
+.space{
+    font-family: "Lucida Console", "Courier New", monospace;
+}
+
+.item {
     border: 2px solid black;
     margin-top: 2px;
     padding: 3px;
 }
 
-.bye
-{
+.bye {
     display: flex;
     margin-left: 570px;
 }
 
-h3{
+h3 {
     font-style: bold;
 }
 
-h1{
+h1 {
+    margin: 0%;
     color: rgb(189, 112, 112);
-    font-family:'Times New Roman', serif;
+    font-family: 'Times New Roman', serif;
+}
+
+.space
+{
+    margin:0%;
+    background-image:url("E:/newChapter/image/space2.jpg") ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+
+    font-size: 25px;
+    color:white;
+    text-align: center;
+    font-family: 'Orbitron',sans-serif;
+   
+}
+
+.button
+{
+    padding: 6px 10px;
+    font-weight: bold;
+    border-color: aliceblue;
+    background: white;
+    font-family: inherit;
+}
+
+.cta
+{
+    color:brown;
+}
+
+.box
+{
+    border: 4px solid rgb(134, 105, 134);
+    padding:8px;
+    width: 700px;
+    margin:10px;
+    border-color:  rgb(227, 176, 87)  rgb(227, 176, 87) rgb(146, 113, 146)  rgb(227, 176, 87) ;
+    text-align: center;
 }
