--- a/style.css
+++ b/style.css
@@ -78,6 +78,41 @@ h1 {
     text-align: center;
 }
 
+
+                            /* Personal website css */
+.personal
+{
+    text-align: center;
+    font-size: 50px;
+}
+
+#line
+{
+    border-bottom: 1px solid black;
+}
+
+                                /*Birthday Website Css*/
+
+.bday
+{
+    color: white;
+    font-family: 'Times New Roman', serif;
+    text-align: center;
+    font-family: 'Orbitron', sans-serif;
+    padding-top:  7px; ;
+    background-color: #a2d2ff;
+    text-shadow: 0px 0px 1px black;
+
+    
+}
+
+#bf-img
+{
+     border:7px solid #EFB0C9; 
+    border-radius: 100%;
+    padding-top: 5px;
+}
+
 @media screen and (max-width:400px) 
 {
     
