--- a/style.css
+++ b/style.css
@@ -96,26 +96,100 @@ h1 {
 .bday
 {
     color: white;
-    font-family: 'Times New Roman', serif;
     text-align: center;
     font-family: 'Orbitron', sans-serif;
-    padding-top:  7px; ;
-    background-color: #a2d2ff;
-    text-shadow: 0px 0px 1px black;
+    text-shadow: 0px 0px 1px black;   
 
-    
+    padding-top:  7px; ;
+    background:linear-gradient(lightblue,pink) ;
+    /* background-color: #a2d2ff; */
+
+    display:flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
 }
 
 #bf-img
 {
-     border:7px solid #EFB0C9; 
+    border:5px solid #EFB0C9; 
     border-radius: 100%;
-    padding-top: 5px;
+    margin-top: 19px;
+    /* padding-top: 5px; */
+}
+
+#birth-age
+{
+    background-color: #EFB0C9 ;
+    padding: 5px 8px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+#birth-date
+{
+    background-color: #EFB0C9 ;
+    padding: 5px;
+    border-radius: 5px;
+    
+}
+
+.gift-title
+{
+    margin-top: 70px;
+}
+
+.gift-img
+{
+    margin-top: 3px;
+    width: 600px;
+    height: 500px;
+    border:6px solid white;
+    border-radius: 5px; 
+    background-image: url("./image/giftCover.jpg");
+    background-size: cover;
+}
+
+#gift-img-happy:hover
+{
+    background-image: url("https://media.giphy.com/media/31lPv5L3aIvTi/giphy.gif");
+}
+
+#gift-img-hot:hover
+{
+    background-image: url("https://media.giphy.com/media/LtkRsMZNSChvICUFhV/giphy.gif");
+}
+
+#gift-img-genius:hover
+{
+    background-image: url("https://media.giphy.com/media/oNKLBehxbnoqY/giphy.gif");
+}
+
+#gift-img-badass:hover
+{
+    background-image: url("https://media.giphy.com/media/kiBcwEXegBTACmVOnE/giphy-downsized-large.gif");
+}
+
+#gift-img-cheer
+{
+    height: 400px;
+    width: 450px;
+    margin-bottom: 20px;
+}
+
+#gift-img-cheer:hover
+{
+    background-image: url("https://media.giphy.com/media/l2Sq2ySYEIl3mzVgk/giphy.gif");
+}
+
+.hiii
+{
+    font-family: 'Orbitron', sans-serif; 
+    color: white;
 }
 
 @media screen and (max-width:400px) 
 {
-    
     body{
         background-color:rgb(148 163 184);;
     }
